--- a/index.html
+++ b/index.html
@@ -135,20 +135,20 @@
 					<div class="elementor-widget-wrap">
 				<div class="elementor-element elementor-element-2d31c98 elementor-nav-menu__align-right elementor-nav-menu--indicator-classic elementor-nav-menu--dropdown-tablet elementor-nav-menu__text-align-aside elementor-nav-menu--toggle elementor-nav-menu--burger elementor-widget elementor-widget-nav-menu" data-id="2d31c98" data-element_type="widget" data-settings="{&quot;layout&quot;:&quot;horizontal&quot;,&quot;toggle&quot;:&quot;burger&quot;}" data-widget_type="nav-menu.default">
 				<div class="elementor-widget-container">
-						<nav role="navigation" class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-underline e--animation-fade"><ul id="menu-1-2d31c98" class="elementor-nav-menu"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-136"><a href="/Home" class="elementor-item">Home</a></li>
+						<nav role="navigation" class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-underline e--animation-fade"><ul id="menu-1-2d31c98" class="elementor-nav-menu"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-136"><a href="index.html" class="elementor-item">Home</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-50"><a href="#about" class="elementor-item elementor-item-anchor">About Us</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-135"><a href="./icfoss/" class="elementor-item">ICFOSS</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-342"><a href="./events/" class="elementor-item">Events</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-135"><a href="icfoss.html" class="elementor-item">ICFOSS</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-342"><a href="events.html" class="elementor-item">Events</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-53"><a href="#contact" class="elementor-item elementor-item-anchor">Contact</a></li>
 </ul></nav>
 					<div class="elementor-menu-toggle" role="button" tabindex="0" aria-label="Menu Toggle" aria-expanded="false">
 			<i class="eicon-menu-bar" aria-hidden="true"></i>
 			<span class="elementor-screen-only">Menu</span>
 		</div>
-			<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" role="navigation" aria-hidden="true"><ul id="menu-2-2d31c98" class="elementor-nav-menu"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-136"><a href="/Home" class="elementor-item">Home</a></li>
+			<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" role="navigation" aria-hidden="true"><ul id="menu-2-2d31c98" class="elementor-nav-menu"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-136"><a href="index.html" class="elementor-item">Home</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-50"><a href="#about" class="elementor-item elementor-item-anchor">About Us</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-135"><a href="./icfoss/" class="elementor-item">ICFOSS</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-342"><a href="./events/" class="elementor-item">Events</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-135"><a href="icfoss.html" class="elementor-item">ICFOSS</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-342"><a href="events.html" class="elementor-item">Events</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-53"><a href="#contact" class="elementor-item elementor-item-anchor">Contact</a></li>
 </ul></nav>
 				</div>
@@ -221,7 +221,7 @@
 				<div class="elementor-widget-container">
 					<div class="elementor-icon-box-wrapper">
 						<div class="elementor-icon-box-icon">
-				<a class="elementor-icon elementor-animation-grow" href="./events/">
+				<a class="elementor-icon elementor-animation-grow" href="events.html">
 				<i aria-hidden="true" class="fas fa-star"></i>				</a>
 			</div>
 						<div class="elementor-icon-box-content">
@@ -242,7 +242,7 @@
 				<div class="elementor-widget-container">
 					<div class="elementor-icon-box-wrapper">
 						<div class="elementor-icon-box-icon">
-				<a class="elementor-icon elementor-animation-grow" href="./exe/">
+				<a class="elementor-icon elementor-animation-grow" href="exe.html">
 				<i aria-hidden="true" class="fab fa-teamspeak"></i>				</a>
 			</div>
 						<div class="elementor-icon-box-content">
@@ -389,7 +389,7 @@
 				<div class="elementor-element elementor-element-18268bee elementor-align-center elementor-widget elementor-widget-button" data-id="18268bee" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="#" class="elementor-button-link elementor-button elementor-size-md elementor-animation-grow" role="button">
+			<a href="register.html" class="elementor-button-link elementor-button elementor-size-md elementor-animation-grow" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">REGISTER NOW</span>
 		</span>
