--- a/firebase/register.html
+++ b/firebase/register.html
@@ -325,7 +325,10 @@
 								<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-field_53c5cc2 elementor-col-100 elementor-field-required elementor-mark-required">
 					<label for="form-field-field_53c5cc2" class="elementor-field-label">Mobile</label><input size="1" type="text" name="form_fields[field_53c5cc2]" id="form-field-field_53c5cc2" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Mobile" required="required" aria-required="true">				</div>
 								<div class="elementor-field-type-checkbox elementor-field-group elementor-column elementor-field-group-field_2f8b6b0 elementor-col-100">
-					<label for="form-field-field_2f8b6b0" class="elementor-field-label">Are You Foss Cell Member</label><div class="elementor-field-subgroup  "><span class="elementor-field-option"><input type="checkbox" value="YES" id="form-field-field_2f8b6b0-0" name="form_fields[field_2f8b6b0][]"> <label for="form-field-field_2f8b6b0-0">YES</label></span><span class="elementor-field-option"><input type="checkbox" value="NO" id="form-field-field_2f8b6b0-1" name="form_fields[field_2f8b6b0][]"> <label for="form-field-field_2f8b6b0-1">NO</label></span></div>				</div>
+					<label for="form-field-field_2f8b6b0" class="elementor-field-label">Are You Foss Cell Member</label>
+					<div class="elementor-field-subgroup  "><span class="elementor-field-option"><input type="checkbox" value="YES" id="form-field-field_2f8b6b0-0" name="form_fields[field_2f8b6b0][]"> <label for="form-field-field_2f8b6b0-0">YES</label></span>
+					<span class="elementor-field-option"><input type="checkbox" value="NO" id="form-field-field_2f8b6b0-1" name="form_fields[field_2f8b6b0][]"> <label for="form-field-field_2f8b6b0-1">NO</label></span></div>		
+					</div>
 								<div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100">
 					<button type="submit" class="elementor-button elementor-size-md elementor-animation-pulse">
 						<span >
